# Demoworkspace

./: .gitignore  README.md  pyproject.toml  requirements.txt
dashboard/: app.py
data/: synthetic_faminga_fields.csv
docs/: data_dictionary.md  mentee_tasks.md
docs/reference/: VS Code for Data and AI Projects-20260506223442.html  VS Code for Data and AI Projects-20260506223517.md
notebooks/: 01_faminga_wiski_demo.ipynb
scripts/: run_demo.py
src/faminga_wiski_demo/: __init__.py  soil_rules.py
tests/: test_soil_rules.py
